2011-07-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-xml-parse-buffer): Use xml-parse-region if
	libxml-parse-xml-region fails for some reason.

2011-07-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-switch-to-buffer): Alias to w3m-switch-to-buffer.

	* nnshimbun.el (nnshimbun-generate-download-script): Use it.

2011-07-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-interactive-p): Alias to w3m-interactive-p.

	* sb-tech-on.el (shimbun-tech-on-login): Use it.

2011-06-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-group-table): Update regexp for rss groups.

2011-04-21  David Engster  <dengste@eml.cc>

	* shimbun.el (shimbun-xml-parse-buffer): New function for XML parsing
	of whole buffer, using libxml if available.

	* sb-atom.el (shimbun-atom-get-headers): Use it.

	* sb-atom-hash.el (content-hash-update-items-impl): Use it.

	* sb-rss.el (shimbun-rss-get-headers): Use it.

	* sb-rss-hash.el (content-hash-update-items-impl): Use it.

2011-04-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-make-html-contents)
	(shimbun-header-insert-and-buffer-string):
	* sb-multi.el (shimbun-multi-retrieve-next-pages):
	Make base url a directory name.

2011-04-06  David Engster  <dengste@eml.cc>

	* nnshimbun.el: Add 'server-marks when declaring nnshimbun backend.

2011-01-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el (shimbun-sankei-get-headers): Improve regexp.

2011-01-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el (shimbun-sankei-group-table): Update index urls for
	column groups.
	(shimbun-sankei-multi-next-url, shimbun-sankei-clear-contents): Adapt
	to new html layout.

2010-12-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-beginning-of-tag, shimbun-end-of-tag): Move
	definitions to w3m-util.el as w3m-beginning-of-tag and w3m-end-of-tag.

2010-12-15  Katsumi Yamaoka  <yamaoka@jpl.org>
